[gd_scene load_steps=9 format=3 uid="uid://dxsbu2qjav1ni"]

[ext_resource type="Theme" uid="uid://w6rxo3pcpy3t" path="res://themes/default_theme.tres" id="2_m76ab"]
[ext_resource type="Texture2D" uid="uid://blsfhueaala46" path="res://assets/textures/general/borders.png" id="3_qyetx"]
[ext_resource type="FontFile" uid="uid://cwxcgtkgg88fp" path="res://assets/fonts/default.png" id="4_xgfg6"]
[ext_resource type="Script" path="res://scripts/gui/letter_box.gd" id="5_gh8b5"]
[ext_resource type="AudioStream" uid="uid://dldiopeensi5" path="res://assets/sounds/sfx/general/SFX_PRESS_AB.wav" id="6_f6un1"]
[ext_resource type="Script" path="res://scripts/gui/letter_case.gd" id="7_lj62m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kxnao"]
texture = ExtResource("3_qyetx")
texture_margin_left = 7.0
texture_margin_top = 7.0
texture_margin_right = 7.0
texture_margin_bottom = 8.0
region_rect = Rect2(1, 1, 22, 23)

[sub_resource type="LabelSettings" id="LabelSettings_lv8oy"]
line_spacing = 0.0
font = ExtResource("4_xgfg6")
font_size = 1
font_color = Color(0, 0, 0, 1)

[node name="Naming" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_gh8b5")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 33.0
offset_right = -1.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_m76ab")
theme_override_styles/panel = SubResource("StyleBoxTexture_kxnao")

[node name="LetterBox" type="Label" parent="Panel"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_vertical = 1
text = " A B C D E F G H I

 J K L M N O P Q R

 S T U V W X Y Z  

 # ( ) : ; [ ] { }

 - ? ! & % / . , @"
label_settings = SubResource("LabelSettings_lv8oy")
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 1

[node name="LetterCase" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 121.0
offset_right = 96.0
offset_bottom = 129.0
theme = ExtResource("2_m76ab")
text = " lower case"
script = ExtResource("7_lj62m")

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f6un1")
volume_db = -10.0

[connection signal="hovering_letter_case" from="." to="LetterCase" method="_activate"]
[connection signal="erase_last_character" from="LetterCase" to="." method="_erase_last_character"]
[connection signal="leaving" from="LetterCase" to="." method="_set_active"]
[connection signal="switching_mode" from="LetterCase" to="." method="_switch_mode"]
